# continuing_education

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-config.yml  CLAUDE.md  Justfile  README.md  mdlinker.toml  pyproject.toml
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yaml  pr_bot.yaml
00_Proximal_Policy_Optimization/: PPO.ipynb  PPO.py
00_Reinforce/: Reinforce.ipynb  Reinforce.py
01_Economics_Game_Theory/: farmer_hoe.ipynb
continuing_education/economics/exchange_vs_use_value/: Exchange_vs_Use_Value_Marxism.ipynb  Exchange_vs_Use_Value_Marxism.py
continuing_education/economics/farmer_hoe/: farmer_hoe.ipynb  farmer_hoe.py
continuing_education/lib/: episodes.py  interfaces.py  types.py
continuing_education/lib/experiments/: __init__.py  manager.py
continuing_education/math/: README.md  log_probability.ipynb  log_probability.py
continuing_education/math/basics/: logarithm.md
continuing_education/math/calculus/: gradient.md  henessian.md  laplacian.md
continuing_education/math/classic_ml/notes/: bagging.md
continuing_education/math/statistics/log_probability/: README.md  log_probability.ipynb
continuing_education/math/statistics/notes/: bootstrapping.md
continuing_education/policy_gradient_methods/: README.md
continuing_education/policy_gradient_methods/00_reinforce/: reinforce.py
continuing_education/policy_gradient_methods/actor_critic/: README.md  a2c.ipynb  a2c.py  actor_critic.ipynb  actor_critic.py  single_threaded.ipynb  single_threaded.py
continuing_education/policy_gradient_methods/notes/: advantage.md
continuing_education/policy_gradient_methods/reinforce/: README.md  __init__.py  reinforce.ipynb  reinforce.py
continuing_education/value_based_methods/ddqn/: ddqn.ipynb  ddqn.py
continuing_education/value_based_methods/dqn/: README.md  dqn.ipynb  dqn.py
continuing_education/value_based_methods/duelingdqn/: README.md  duelingdqn.py
continuing_education/value_based_methods/notes/: td.md  value.md
notes/logseq/bak/pages/dqn/: 2025-02-14T01_45_08.559Z.Desktop.md  2025-02-14T01_51_41.635Z.Desktop.md  2025-02-14T01_52_04.520Z.Desktop.md
notes/pages/: actor critic.md  actor-critic.md  advantage.md  dqn.md  duelingdqn.md  gradient.md  log-probability.md  log_probability.md  policy-gradient.md  reinforce.md  value-based-methods.md
