[project]
name = "continuing-education"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Ryan Peach", email = "rgpeach10@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "gymnasium<1.0.0,>=0.29.1",
    "numpy<2.0.0,>=1.26.4",
    "pydantic<3.0.0,>=2.6.4",
    "pillow<11.0.0,>=10.2.0",
    "pygame<3.0.0,>=2.5.2",
    "gym-games<2.0.0,>=1.0.3",
    "MinAtar<2.0.0,>=1.0.15",
    "huggingface-hub<1.0.0,>=0.21.4",
    "ipytest<1.0.0,>=0.14.0",
    "ple @ file:///${PROJECT_ROOT}/submodules/PyGame-Learning-Environment",
    "plotly<6.0.0,>=5.20.0",
    "sympy<2.0,>=1.12",
    "tqdm<5.0.0,>=4.66.2",
    "pandas<3.0.0,>=2.2.2",
    "gitpython<4.0.0,>=3.1.43",
    "torch>=2.4.1",
]
[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.1.1",
    "jupyter<2.0.0,>=1.0.0",
    "jupytext<2.0.0,>=1.16.1",
    "pre-commit<4.0.0,>=3.6.2",
    "types-tqdm<5.0.0.0,>=4.66.0.20240106",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
extend-include = ["*.ipynb"]
exclude = ["./submodules"]

[tool.ruff.lint]
extend-ignore = ["E402"]

[tool.pyright]
venvPath = "."
venv = ".venv"
