[project]
name = "continuing-education"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Ryan Peach", email = "rgpeach10@gmail.com"},
]
license = {text = "MIT"}
requires-python = "~=3.11"
dependencies = [
    "gymnasium~=0.29.1",
    "numpy~=1.26.4",
    "pydantic~=2.6.4",
    "pillow~=10.2.0",
    "pygame~=2.5.2",
    "gym-games~=1.0.3",
    "MinAtar~=1.0.15",
    "huggingface-hub~=0.21.4",
    "ipytest~=0.14.0",
    "plotly~=5.20.0",
    "sympy~=1.12",
    "tqdm~=4.66.2",
    "pandas~=2.2.2",
    "gitpython~=3.1.43",
    "torch>=2.4.1",
    "ple",
]
[dependency-groups]
dev = [
    "pytest~=8.1.1",
    "jupyter~=1.0.0",
    "jupytext~=1.16.1",
    "pre-commit~=3.6.2",
    "types-tqdm~=4.66.0.20240106",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
extend-include = ["*.ipynb"]
exclude = ["./submodules"]

[tool.ruff.lint]
extend-ignore = ["E402"]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportPrivateImportUsage = false
reportPossiblyUnboundVariable = false # This happens a lot with juyter notebooks

[tool.uv]
dev-dependencies = [
    "jupytext>=1.16.7",
]

[tool.uv.sources]
ple = { git = "https://github.com/ntasfi/PyGame-Learning-Environment.git" }
